# job-finder-bot

./: .env.example  .gitignore  Procfile  README.md  db.py  docker-compose.yml  dockerfile  job_finder_bot.py  pyproject.toml  requirements.txt  sources.py
scripts/: fetch_onlinejobs_html.py  onlinejobs_query_results.py  print_onlinejobs_query.py
